LibHeifFX/src/main/java/org/libheif/nativ/heif_h.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * enum heif_filetype_result heif_check_filetype(const uint8_t *data, int len)
     * }
     */
    public static MethodHandle heif_check_filetype$handle() {
        return heif_check_filetype.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * enum heif_filetype_result heif_check_filetype(const uint8_t *data, int len)
     * }
     */
    public static int heif_check_filetype(MemorySegment data, int len) {
        var mh$ = heif_check_filetype.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_check_filetype", data, len);
            }
            return (int)mh$.invokeExact(data, len);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
    private static final int heif_unknown_brand = (int)0L;
    /**
     * {@snippet lang=c :
     * enum heif_brand.heif_unknown_brand = 0
     * }
     */
    public static int heif_unknown_brand() {
        return heif_unknown_brand;
    }
    private static final int heif_heic = (int)1L;
    /**
     * {@snippet lang=c :
     * enum heif_brand.heif_heic = 1
     * }
     */
    public static int heif_heic() {
        return heif_heic;
    }
    private static final int heif_heix = (int)2L;
    /**
     * {@snippet lang=c :
     * enum heif_brand.heif_heix = 2
     * }
     */
    public static int heif_heix() {
        return heif_heix;
    }
    private static final int heif_hevc = (int)3L;
    /**
     * {@snippet lang=c :
     * enum heif_brand.heif_hevc = 3
     * }
     */
    public static int heif_hevc() {
        return heif_hevc;
    }
    private static final int heif_hevx = (int)4L;
    /**
     * {@snippet lang=c :
     * enum heif_brand.heif_hevx = 4
     * }
     */
    public static int heif_hevx() {
        return heif_hevx;
    }
    private static final int heif_heim = (int)5L;
    /**
     * {@snippet lang=c :
     * enum heif_brand.heif_heim = 5
     * }
     */
    public static int heif_heim() {
        return heif_heim;
    }
    private static final int heif_heis = (int)6L;
    /**
     * {@snippet lang=c :
     * enum heif_brand.heif_heis = 6
     * }
     */
    public static int heif_heis() {
        return heif_heis;
    }
    private static final int heif_hevm = (int)7L;
    /**
     * {@snippet lang=c :
     * enum heif_brand.heif_hevm = 7
     * }
     */
    public static int heif_hevm() {
        return heif_hevm;
    }
    private static final int heif_hevs = (int)8L;
    /**
     * {@snippet lang=c :
     * enum heif_brand.heif_hevs = 8
     * }
     */
    public static int heif_hevs() {
        return heif_hevs;
    }
    private static final int heif_mif1 = (int)9L;
    /**
     * {@snippet lang=c :
     * enum heif_brand.heif_mif1 = 9
     * }
     */
    public static int heif_mif1() {
        return heif_mif1;
    }
    private static final int heif_msf1 = (int)10L;
    /**
     * {@snippet lang=c :
     * enum heif_brand.heif_msf1 = 10
     * }
     */
    public static int heif_msf1() {
        return heif_msf1;
    }
    private static final int heif_avif = (int)11L;
    /**
     * {@snippet lang=c :
     * enum heif_brand.heif_avif = 11
     * }
     */
    public static int heif_avif() {
        return heif_avif;
    }
    private static final int heif_avis = (int)12L;
    /**
     * {@snippet lang=c :
     * enum heif_brand.heif_avis = 12
     * }
     */
    public static int heif_avis() {
        return heif_avis;
    }

    private static class heif_main_brand {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER,
            heif_h.C_INT
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_main_brand"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * enum heif_brand heif_main_brand(const uint8_t *data, int len)
     * }
     */
    public static FunctionDescriptor heif_main_brand$descriptor() {
        return heif_main_brand.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * enum heif_brand heif_main_brand(const uint8_t *data, int len)
     * }
     */
    public static MethodHandle heif_main_brand$handle() {
        return heif_main_brand.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * enum heif_brand heif_main_brand(const uint8_t *data, int len)
     * }
     */
    public static int heif_main_brand(MemorySegment data, int len) {
        var mh$ = heif_main_brand.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_main_brand", data, len);
            }
            return (int)mh$.invokeExact(data, len);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
    /**
     * {@snippet lang=c :
     * typedef uint32_t heif_brand2
     * }
     */
    public static final OfInt heif_brand2 = heif_h.C_INT;

    private static class heif_read_main_brand {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER,
            heif_h.C_INT
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_read_main_brand"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * heif_brand2 heif_read_main_brand(const uint8_t *data, int len)
     * }
     */
    public static FunctionDescriptor heif_read_main_brand$descriptor() {
        return heif_read_main_brand.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * heif_brand2 heif_read_main_brand(const uint8_t *data, int len)
     * }
     */
    public static MethodHandle heif_read_main_brand$handle() {
        return heif_read_main_brand.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * heif_brand2 heif_read_main_brand(const uint8_t *data, int len)
     * }
     */
    public static int heif_read_main_brand(MemorySegment data, int len) {
        var mh$ = heif_read_main_brand.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_read_main_brand", data, len);
            }
            return (int)mh$.invokeExact(data, len);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_fourcc_to_brand {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_fourcc_to_brand"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * heif_brand2 heif_fourcc_to_brand(const char *brand_fourcc)
     * }
     */
    public static FunctionDescriptor heif_fourcc_to_brand$descriptor() {
        return heif_fourcc_to_brand.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * heif_brand2 heif_fourcc_to_brand(const char *brand_fourcc)
     * }
     */
    public static MethodHandle heif_fourcc_to_brand$handle() {
        return heif_fourcc_to_brand.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * heif_brand2 heif_fourcc_to_brand(const char *brand_fourcc)
     * }
     */
    public static int heif_fourcc_to_brand(MemorySegment brand_fourcc) {
        var mh$ = heif_fourcc_to_brand.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_fourcc_to_brand", brand_fourcc);
            }
            return (int)mh$.invokeExact(brand_fourcc);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_brand_to_fourcc {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_brand_to_fourcc"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void heif_brand_to_fourcc(heif_brand2 brand, char *out_fourcc)
     * }
     */
    public static FunctionDescriptor heif_brand_to_fourcc$descriptor() {
        return heif_brand_to_fourcc.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void heif_brand_to_fourcc(heif_brand2 brand, char *out_fourcc)
     * }
     */
    public static MethodHandle heif_brand_to_fourcc$handle() {
        return heif_brand_to_fourcc.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * void heif_brand_to_fourcc(heif_brand2 brand, char *out_fourcc)
     * }
     */
    public static void heif_brand_to_fourcc(int brand, MemorySegment out_fourcc) {
        var mh$ = heif_brand_to_fourcc.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_brand_to_fourcc", brand, out_fourcc);
            }
            mh$.invokeExact(brand, out_fourcc);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_has_compatible_brand {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_INT,
            heif_h.C_POINTER,
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_has_compatible_brand"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int heif_has_compatible_brand(const uint8_t *data, int len, const char *brand_fourcc)
     * }
     */
    public static FunctionDescriptor heif_has_compatible_brand$descriptor() {
        return heif_has_compatible_brand.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int heif_has_compatible_brand(const uint8_t *data, int len, const char *brand_fourcc)
     * }
     */
    public static MethodHandle heif_has_compatible_brand$handle() {
        return heif_has_compatible_brand.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * int heif_has_compatible_brand(const uint8_t *data, int len, const char *brand_fourcc)
     * }
     */
    public static int heif_has_compatible_brand(MemorySegment data, int len, MemorySegment brand_fourcc) {
        var mh$ = heif_has_compatible_brand.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_has_compatible_brand", data, len, brand_fourcc);
            }
            return (int)mh$.invokeExact(data, len, brand_fourcc);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_list_compatible_brands {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_error.layout(),
            heif_h.C_POINTER,
            heif_h.C_INT,
            heif_h.C_POINTER,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_list_compatible_brands"),
                    DESC);
    }
